--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -34,11 +34,54 @@
 }
 
 .heading__title {
-    font-family: Helvetica;
+    font-family: 'Essonnes';
     font-size: 224px;
     color: #ffffff;
     letter-spacing: 5.6px;
     text-align: center;
+}
+
+/*  ---------- Navigation ----------  */
+
+.nav {
+    position: absolute;
+    top: 3%;
+    left: calc(100vw - 72%);
+    width: calc(100vw - 35%);
+}
+
+.nav__ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    align-items: center;
+    /* background-color: rgba(143, 35, 35, 0.25); */
+    padding: 25px 0;
+}
+
+.nav__ul-li a {
+    /* padding: 25px; */
+    text-decoration: none;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+}
+
+.nav__ul-li a:hover {
+    filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
+        drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
+}
+
+/*  ---------- Search icon ----------  */
+.fas {
+    color: #ffffff;
+    font-size: 25px;
+}
+
+.fas:hover {
+    cursor: pointer;
+    filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
+        drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
 }
 
 /*  ---------- Heading ----------  */
@@ -73,6 +116,11 @@
 
 .heading__description-button__text {
     font-size: 25px;
+}
+
+.heading__description:hover {
+    filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
+        drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
 }
 
 /*  ---------- Card ----------  */
@@ -169,4 +217,14 @@
 .social-media__instagram {
     margin: 5px;
     filter: drop-shadow(0px 0px 5px #000000);
+}
+
+.social-media__facebook:hover {
+    filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
+        drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
+}
+
+.social-media__instagram:hover {
+    filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
+        drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
 }
