--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -209,22 +209,12 @@
     right: 3%;
 }
 
-.social-media__facebook {
+.social-media__card {
     margin: 5px;
     filter: drop-shadow(0px 0px 5px #000000);
 }
 
-.social-media__instagram {
-    margin: 5px;
-    filter: drop-shadow(0px 0px 5px #000000);
-}
-
-.social-media__facebook:hover {
-    filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
-        drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
-}
-
-.social-media__instagram:hover {
+.social-media__card:hover {
     filter: drop-shadow(3px 0px 0px #8f2323) drop-shadow(0px 3px 0px #8f2323)
         drop-shadow(0px -3px 0px #8f2323) drop-shadow(-3px 0px 0px #8f2323);
 }
