--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -5,41 +5,12 @@
 }
 
 .background__sidebar {
-    display: none;
-}
-
-/*  ---------- Navigation ----------  */
-.nav {
-    left: 0;
-    top: 0;
-    position: absolute;
-    width: 100vw;
-    background-color: #611818;
-    padding: 25px 50px;
-}
-
-.nav__ul-li a:hover {
-    background-color: #ffffff;
-    color: #611818;
-    filter: none;
-}
-
-/*  ---------- Search icon ----------  */
-.fas:hover {
-    background-color: #ffffff;
-    color: #611818;
-    filter: none;
+    flex: 0 0 10em;
 }
 
 /*  ---------- Heading ----------  */
 .heading {
-    left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.heading__title {
-    font-size: 100px;
 }
 
 /*  ---------- Card ----------  */
@@ -63,5 +34,5 @@
     flex-direction: row;
 
     position: absolute;
-    left: calc(100vw - 60%);
+    left: calc(100vw - 65%);
 }
