bug: fixed card height for mobile

--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -22,8 +22,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow-y: hidden;
-    overflow-x: hidden;
 }
 
 /*  ---------- Background ----------  */
@@ -50,6 +48,8 @@
     top: 60%;
     left: 20%;
     position: absolute;
+    overflow-y: unset;
+    overflow-x: unset;
 }
 
 .heading__title {
@@ -65,6 +65,7 @@
 .heading__description {
     position: absolute;
     top: 82%;
+
     margin-left: 9%;
 }
 
@@ -99,8 +100,11 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 70px;
-    width: 580px;
-    height: 702px;
+    max-width: 580px;
+    max-height: 702px;
+
+    width: 90%;
+
     background-color: var(--clr-bg-secondary);
     box-shadow: 0 0 10px 7px rgba(0, 0, 0, 0.3);
 }
@@ -111,8 +115,9 @@
 }
 
 .card__heading-title {
-    font-size: 66px;
-    color: #611818;
+    /* font-size: 66px; */
+    font-size: clamp(15px, 10vw, 66px);
+    color: var(--clr-bg-primary);
     letter-spacing: 1.65px;
 }
 
