--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,7 +1,3 @@
-* {
-    overflow-y: unset;
-    overflow-x: unset;
-}
 /*  ---------- Background ----------  */
 .background {
     display: flex;
@@ -15,21 +11,25 @@
 /*  ---------- Heading ----------  */
 .heading {
     top: 50%;
+    overflow-y: unset;
+    overflow-x: unset;
+}
+
+.heading__description {
+    margin-top: 20px;
 }
 
 /*  ---------- Card ----------  */
 .card {
-    padding: 30px;
-    width: calc(100vw - 50%);
+    padding: 20px;
     overflow-y: scroll;
-
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
 
 .card__button {
-    width: 100%;
+    /* width: 100%; */
 }
 
 /*  ---------- Social media ----------  */
